fix: align copy button from wallets list - Issue #59

--- a/src/presentation/components/Wallet.css
+++ b/src/presentation/components/Wallet.css
@@ -1,3 +1,7 @@
+.wBalance{
+    width: 90%;
+}
+
 .btnCopy {
     width: 20px;
     height: 20px;
